--- a/css/style.css
+++ b/css/style.css
@@ -901,41 +901,47 @@ a:focus {
   color: #ffffff;
 }
 
-/* استایل‌های پایه برای دسکتاپ */
 .client_section {
   padding-bottom: 50px;
-  text-align: left;
+  text-align: left; /* تراز متن‌ها به سمت چپ */
 }
 
 .client_section .heading_container {
   margin-bottom: 40px;
-  text-align: left;
+  text-align: left; /* تراز عنوان به سمت چپ */
 }
 
 .client_section .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  margin: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: -70px 0;
 }
-
 .client_section .box .img-box {
   width: 125px;
-  height: 125px;
-  border-radius: 50%;
+  height: 9px;
+  border-radius: 40%;
   overflow: hidden;
-  margin-left: -180px; /* تنظیمات دسکتاپ (بدون تغییر) */
-  margin-right: 90px; /* تنظیمات دسکتاپ (بدون تغییر) */
+  margin-left: -180px;  /* عکس به سمت چپ حرکت می‌کند */
+  margin-right: 90px; /* فاصله بین عکس و متن */
+  position: relative;
 }
+
 
 .client_section .box .img-box img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .client_section .box .client_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .client_section .box .client_info .client_name h5 {
@@ -953,6 +959,11 @@ a:focus {
   text-transform: uppercase;
 }
 
+.client_section .box .client_info i {
+  font-size: 24px;
+  color: #03a7d3;
+}
+
 .client_section .box p {
   margin-top: 20px;
 }
@@ -960,39 +971,83 @@ a:focus {
 .client_section .box .detail-box {
   background-color: #ffffff;
   padding: 20px 120px 15px 30px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* استایل‌های موبایل */
-@media (max-width: 767px) {
-  .client_section .box {
-    flex-direction: column; /* تغییر جهت به عمودی */
-    text-align: center; /* متن‌ها را وسط‌چین کنید */
+.client_section .carousel-control-prev,
+.client_section .carousel-control-next {
+  width: 50px;
+  height: 50px;
+  background-color: #03a7d3;
+  opacity: 1;
+  font-size: 28px;
+  font-weight: bold;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.client_section .carousel-control-prev {
+  left: 0;
+}
+.client_section .carousel-item .container .row .col-md-10 .box {
+  border-radius: 15px; /* به قاب شعاع گرد بدهید */
+  overflow: hidden; /* برای جلوگیری از نمایش قسمتی از تصویر که بیرون می‌زند */
+  padding: 180px; /* فضای داخلی افزایش یابد */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* سایه اطراف قاب */
+}
+
+.client_section .carousel-item .container .row .col-md-10 .box .img-box {
+  width: 100%;
+  height: 400px; /* اندازه عکس بزرگتر شود */
+  overflow: hidden;
+}
+
+.client_section .carousel-item .container .row .col-md-10 .box .img-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* تصویر را طوری تنظیم می‌کند که به خوبی نمایش داده شود */
+}
+
+.client_section .carousel-item .container .row .col-md-10 .box .detail-box p {
+  font-size: 12px; /* متن کوچک‌تر شود */
+  line-height: 1.3;
+}
+
+.client_section .carousel-item .container .row .col-md-10 .box .detail-box .client_info h5 {
+  font-size: 18px; /* نام مشتری کمی بزرگتر شود */
+}
+
+.client_section .carousel-item .container .row .col-md-10 .box .detail-box .client_info h6 {
+  font-size: 14px; /* شغل مشتری کمی کوچکتر شود */
+}
+/* برای تغییر ترتیب در موبایل */
+@media only screen and (max-width: 768px) {
+  .client_section .carousel-item .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .client_section .box .img-box {
-    width: 150px; /* اندازه تصویر در موبایل */
-    height: 150px; /* اندازه تصویر در موبایل */
-    margin: 0 auto 20px; /* مرکز‌چین و فاصله از متن */
+  .client_section .carousel-item .box .img-box {
+    margin-bottom: 15px; /* فاصله بین عکس و متن */
   }
 
-  .client_section .box .detail-box {
-    padding: 20px; /* کاهش padding برای موبایل */
+  .client_section .carousel-item .box img {
+    width: 200px; /* اندازه عکس در موبایل */
+    height: 200px; /* ارتفاع عکس */
+    object-fit: cover; /* برای تنظیم به درستی ابعاد عکس */
   }
 
-  .client_section .box .client_info {
-    flex-direction: column; /* تغییر جهت به عمودی */
-    align-items: center; /* وسط‌چین کردن آیتم‌ها */
+  .client_section .carousel-item .box .detail-box {
+    text-align: center; /* متن را به صورت مرکزی قرار می‌دهیم */
+    padding: 0 15px; /* کمی فضای داخلی برای بهتر دیده شدن متن */
   }
 
-  .client_section .box .client_info .client_name h5,
-  .client_section .box .client_info .client_name h6 {
-    font-size: 14px; /* کاهش اندازه فونت برای موبایل */
-  }
-
-  .client_section .box p {
-    font-size: 12px; /* کاهش اندازه فونت متن */
+  .client_section .carousel-item .box .client_info {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
